fixed file name again

--- a/scan-23.html
+++ b/scan-23.html
@@ -15,8 +15,8 @@
 </div>
 
 <div id="scan29">
-	<a href="scan24.html">
-	<img src="images/scan29.png">
+	<a href="scan-24.html">
+	<img src="images/Scan29.png">
 	</a>
 </div>
 
